# GitScope

./: .gitignore  Cli_intial.py  README.md  pyproject.toml  requirements.txt  setup.cfg
chat/: main.py
core/: ai.py  clone.py  github_search.py  init.py  installer.py  main.py  summarize.py
old/: dependencies_installer.py  search_github.py
repo_manager/: repo_manager.py
search_github/: search_github.py
src/: GUI.py  repo_manager.py
src/gitscope/: __init__.py  ai.py  installer.py  main.py  summarize.py
src/gitscope.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
summarizer/: simple_gemini.py
