[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gitscope"
version = "0.1.0"
description = "GitHub repository exploration CLI"
requires-python = ">=3.9"

[project.scripts]
gitscope = "gitscope.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

